# java-vs-go/file-server-go/pkg/domain/model/User.go
@@ -6,3 +6,15 @@ type User struct {
 	AuthToken string   `json:"authToken"`
 	Roles     []string `json:"roles"`
 }
+
+func (u *User) GetId() string {
+	return u.AuthToken
+}
+
+func (u *User) GetRoles() []string {
+	return u.Roles
+}
+
+func (u *User) EncryptedPassword() string {
+	return u.Password
+}
